# pm3

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: .gitignore  package.json
docs/content/docs/: comparison.mdx  quick-start.mdx
docs/content/docs/configuration/: memory-limits.mdx
docs/content/docs/guides/: ci-cd.mdx
docs/public/: instal.ps1  instal.sh
docs/scripts/: generate-search-index.ts
docs/src/components/: config-builder.tsx  install-command.tsx  provider.tsx
docs/src/lib/: layout.shared.tsx
docs/src/pages/(home)/: index.tsx
docs/src/styles/: globals.css
src/: cli.rs  config.rs  daemon.rs  deps.rs  main.rs  manager.rs  memory.rs  process.rs  protocol.rs  sys.rs  watch.rs
tests/: daemon.rs
