[package]
name = "pm3"
version = "0.1.6"
edition = "2024"
repository = "https://github.com/frectonz/pm3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
cliclack = "0.3.8"
color-eyre = "0.6.5"
comfy-table = "7.2.2"
cron = "0.15.0"
crossterm = "0.29.0"
dirs = "6.0.0"
notify = "8.2.0"
owo-colors = "4.2.3"
ratatui = { version = "0.30.0", features = ["crossterm"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"

[target."cfg(unix)".dependencies]
nix = { version = "0.31.1", features = ["signal", "process", "term", "fs"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_ProcessStatus"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
regex = "1.12.3"
serde_json = "1.0.149"
tempfile = "3.24.0"
